                    add polymer alignment methods.
 24-Sep-2019  V0.69 Add additional polymer_instance features and new polymer_instance_validations methods.
 25-Sep-2019  V0.70 Incorporate RCSB extensions in 'min' schemas add single collection specific identifiers core collections
                    Add missing required entry identifiers.
 25-Sep-2019  V0.71 Adjustments for edge cases and enums after full-load tests
 29-Sep-2019  V0.72 Further adjustments for edge cases and enums after full-load tests
 29-Sep-2019  V0.73 Parallelize merging content types in RepositoryProvider()
 29-Sep-2019  V0.74 Cleaning up more edge cases with missing or misorganized data
  6-Oct-2019  V0.75 Reorganize feature value within feature range and position subcategories
  7-Oct-2019  V0.76 Tweak sequence reference processing to better cope with inconsistencies and missing data.
  8-Oct-2019  V0.77 Upversion schema after successful build
 14-Oct-2019  V0.78 Add support for sequence isoforms, entry molecular weight, turn off SIFTS for
                    references and alignments,  and various schema adjusts.
 14-Oct-2019  V0.79 Add test cases and fix exceptions for missing sequence difference details.
 14-Oct-2019  V0.80 Fix linting issue and update documentation in configuration example file -
 16-Oct-2019  V0.81 Filter reference sequence assignments marked as self-reference - added tests for GO Id consistency
 17-Oct-2019  V0.82 Preserve annotations on self-referenced sequences for now/shift ATC depth
 19-Oct-2019  V0.83 Strip missing/empty values from subcategory aggregates/handle missing accession codes on struct_ref_seq records
 19-Oct-2019  V0.84 Abandon reliance on ref_id/align_id consistency in struct_ref_* categories.
 20-Oct-2019  V0.85 Update type, coverage and configuration for latest IHM dictioanry update
 23-Oct-2019  V0.86 Add nesting property to objects with unit cardinality,
                    don't propagate exact-match/suggest search contexts to full-text